--- a/style.css
+++ b/style.css
@@ -1,24 +1,33 @@
-* {
-    padding: 0px;
-    margin: 0px;
+*{
+    padding:0;
+    margin: 0;
     box-sizing: border-box;
 }
- 
-img {
-    border: solid 2px rgb(0, 0, 0);
-width: 300px;
-height: 200px;
-border-radius: 10px;
-}
-.container{
+
+body {
     display: flex;
     justify-content: center;
-    margin: 0 0 20px 0;
-    gap: 20px;
-    padding: 20px 0 0 0 ;
+    padding: 30px 0 0 0;
 }
-body {
-    padding: 20px 0 0 0;
-    background-image:url()
-    background-size: 100%;
+
+div {
+    width: 70%;
+    background-color: bisque;
+    border: solid 2px black;
+    border-radius: 10px;
+    padding:15 px 15 px 15px 15px; 
+    
+}
+h1{
+    text-align: center;
+    margin-bottom: 20px;
+}
+img{
+    width: 700px;
+    margin-bottom: 20px;
+   margin-left: 200px;
+}
+
+p {
+ padding: 15px 15px 15px 15px;
 }
